--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -119,7 +119,13 @@
                     Update
                 </button>
             </div>
+            
+            </div>
         </form>
+        <div class="flex items-center justify-between">
+            <a style="background-color: #cc1212;" href="{% url "changes" %}" class=" hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+                Password Changes
+            </a>
     </div>
 </div>
 {% endblock %}
