--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -55,7 +55,7 @@
         <img  class="rounded-2xl" src="{% static 'img/bank.jpg' %}" alt="Bank Image">
     </div>
 </div>
-{% include "footer.html" %}
+{% comment %} {% include "footer.html" %} {% endcomment %}
 {% endblock %}
 
 
