--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -84,6 +84,15 @@
                 </form>
             </div>
         {% else %}
+            
+        <div class="text-md lg:flex-grow">
+            <a href="" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">Report</a>
+            <a href="" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">Deposit</a>
+            <a href="" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">Withdraw</a>
+            <a href="" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">Loan Request</a>
+            <a href="" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">Transfer</a>
+        </div>
+
             <div class="text-md lg:flex-grow"></div>
             <div>
                 <a href="{% url 'login' %}" class="mr-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-red-700 mt-4 lg:mt-0">Login</a>
