--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -59,7 +59,7 @@
 
 <nav class="flex items-center justify-between flex-wrap p-6 px-10" style="background-color: #87bce4;">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <span class="font-semibold text-xl tracking-tight text-blue-900"><a href="/">Mamar Bank</a></span>
+        <span class="font-semibold text-xl tracking-tight text-blue-900"><a href="/">NGF Bank</a></span>
     </div>
     <div class="block lg:hidden">
         <button id="nav-toggle" class="flex items-center px-3 py-2 border rounded text-white border-white-400 hover:text-white hover:border-white">
