--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -60,7 +60,7 @@
         <!-- Testimonial 1 -->
         <div class="w-full md:w-1/3 px-4 mb-8">
           <div class="bg-white p-8 rounded-lg shadow-lg">
-            <p class="mb-4">"Mamar Bank has been incredibly helpful with managing my finances. Highly recommend!"</p>
+            <p class="mb-4">"NGF Bank has been incredibly helpful with managing my finances. Highly recommend!"</p>
             <p class="font-bold">- John Doe</p>
           </div>
         </div>
@@ -68,7 +68,7 @@
         <!-- Testimonial 2 -->
         <div class="w-full md:w-1/3 px-4 mb-8">
           <div class="bg-white p-8 rounded-lg shadow-lg">
-            <p class="mb-4">"The loan process was so smooth and quick. Thank you, Mamar Bank!"</p>
+            <p class="mb-4">"The loan process was so smooth and quick. Thank you, NGF Bank!"</p>
             <p class="font-bold">- Sarah Lee</p>
           </div>
         </div>
@@ -76,7 +76,7 @@
         <!-- Testimonial 3 -->
         <div class="w-full md:w-1/3 px-4 mb-8">
           <div class="bg-white p-8 rounded-lg shadow-lg">
-            <p class="mb-4">"Mobile banking makes my life so much easier. I love it!,Thank you, Mamar Bank!""</p>
+            <p class="mb-4">"Mobile banking makes my life so much easier. I love it!,Thank you, NGF Bank!""</p>
             <p class="font-bold">- Alex Brown</p>
           </div>
         </div>
@@ -88,7 +88,7 @@
   <section id="register" class="bg-blue-100 text-black py-16" >
     <div class="container mx-auto text-center px-4 md:px-0">
       <h2 class="text-3xl md:text-4xl font-bold mb-4">Ready to Bank with Us?</h2>
-      <p class="mb-8">Join Mamar Bank and experience the best in banking today.</p>
+      <p class="mb-8">Join NGF Bank and experience the best in banking today.</p>
       <a href="{% url 'register' %}" class="bg-yellow-500 text-white py-2 px-6 rounded-full hover:bg-yellow-600 transition">Register Now</a>
     </div>
   </section>
