--- a/transactions/templates/transactions/transfer.html
+++ b/transactions/templates/transactions/transfer.html
@@ -20,7 +20,7 @@
 <div class="w-full flex mt-5 justify-center ">
     <div class="bg-white w-5/12 rounded-lg">
         
-        <h1 class="font-bold text-3xl text-center pb-5 pt-10 px-5">Balance Transfer Form</h1>
+        <h1 class="font-bold text-3xl text-center pb-5 pt-10 px-5">Balance Transfer </h1>
         <form method="post" class="px-8 pt-6 pb-8 mb-4">
             {% csrf_token %}
             {{form}}
